--- a/src/app/features/modals/settings/security-settings/security-settings.component.html
+++ b/src/app/features/modals/settings/security-settings/security-settings.component.html
@@ -16,7 +16,6 @@
       <!-- Overview Tab -->
       <mat-tab label="Overview">
         <ng-template mat-tab-label>
-          <mat-icon svgIcon="shield"></mat-icon>
           <span>Overview</span>
         </ng-template>
 
@@ -135,7 +134,7 @@
               </div>
               <div class="card-content">
                 <form [formGroup]="overviewForm">
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline">
                     <mat-label>Configuration Password</mat-label>
                     <input
                       matInput
@@ -187,7 +186,7 @@
                 }
                 @if (hasStoredPassword) {
                   <button
-                    mat-stroked-button
+                    matButton="filled"
                     class="warn"
                     [disabled]="passwordLoading.isRemovingPassword"
                     (click)="removePassword()"
@@ -207,7 +206,6 @@
       <!-- Encryption Tab -->
       <mat-tab label="Encryption">
         <ng-template mat-tab-label>
-          <mat-icon svgIcon="lock"></mat-icon>
           <span>Encryption</span>
         </ng-template>
 
@@ -236,7 +234,7 @@
                 }}</span>
               </div>
               <form [formGroup]="encryptionForm" class="encryption-form">
-                <mat-form-field appearance="outline" class="full-width">
+                <mat-form-field appearance="outline">
                   <mat-label>{{
                     isEncryptedConfig ? 'Password for Decryption' : 'Password for Encryption'
                   }}</mat-label>
@@ -270,7 +268,7 @@
                   }
                 </mat-form-field>
                 @if (!isEncryptedConfig) {
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline">
                     <mat-label>Confirm Password</mat-label>
                     <input
                       matInput
@@ -305,7 +303,7 @@
                 </button>
               } @else {
                 <button
-                  mat-stroked-button
+                  matButton="filled"
                   (click)="unencryptConfig()"
                   [disabled]="!canUnencrypt || passwordLoading.isUnencrypting"
                   class="action-button-large warn"
@@ -331,7 +329,7 @@
               </div>
               <div class="card-content">
                 <form [formGroup]="changePasswordForm" class="password-change-form">
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline">
                     <mat-label>Current Password</mat-label>
                     <input
                       matInput
@@ -345,7 +343,7 @@
                       <mat-error>Current password is required</mat-error>
                     }
                   </mat-form-field>
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline">
                     <mat-label>New Password</mat-label>
                     <input
                       matInput
@@ -359,7 +357,7 @@
                       <mat-error>New password is required</mat-error>
                     }
                   </mat-form-field>
-                  <mat-form-field appearance="outline" class="full-width">
+                  <mat-form-field appearance="outline">
                     <mat-label>Confirm New Password</mat-label>
                     <input
                       matInput
@@ -399,63 +397,66 @@
       </mat-tab>
 
       <!-- Advanced Tab -->
-      <mat-tab label="Advanced">
-        <ng-template mat-tab-label>
-          <mat-icon svgIcon="wrench"></mat-icon>
-          <span>Advanced</span>
-        </ng-template>
+      @if (isEncryptedConfig) {
+        <mat-tab label="Advanced">
+          <ng-template mat-tab-label>
+            <span>Advanced</span>
+          </ng-template>
 
-        <div class="tab-content">
-          <!-- Environment Variables (only for encrypted configs) -->
-          @if (isEncryptedConfig) {
-            <div class="card">
-              <div class="card-header">
-                <div class="card-title">
-                  <mat-icon svgIcon="terminal"></mat-icon>
-                  <h3>Environment Variables</h3>
+          <div class="tab-content">
+            <!-- Environment Variables (only for encrypted configs) -->
+            @if (isEncryptedConfig) {
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-title">
+                    <mat-icon svgIcon="terminal"></mat-icon>
+                    <h3>Environment Variables</h3>
+                  </div>
+                  <p class="card-description">
+                    Manage password environment variables for the current session
+                  </p>
                 </div>
-                <p class="card-description">
-                  Manage password environment variables for the current session
-                </p>
-              </div>
-              <div class="card-content">
-                <div class="status-grid">
-                  <div class="status-item">
-                    <div class="status-indicator">
-                      <mat-icon
-                        [svgIcon]="hasEnvPassword ? 'circle-check' : 'circle-info'"
-                      ></mat-icon>
-                    </div>
-                    <div class="status-details">
-                      <h4>RCLONE_CONFIG_PASS:</h4>
-                      <p>{{ hasEnvPassword ? 'Set' : 'Not set' }}</p>
+                <div class="card-content">
+                  <div class="status-grid">
+                    <div class="status-item">
+                      <div class="status-indicator">
+                        <mat-icon
+                          [svgIcon]="hasEnvPassword ? 'circle-check' : 'circle-info'"
+                        ></mat-icon>
+                      </div>
+                      <div class="status-details">
+                        <h4>RCLONE_CONFIG_PASS:</h4>
+                        <p>{{ hasEnvPassword ? 'Set' : 'Not set' }}</p>
+                      </div>
                     </div>
                   </div>
                 </div>
+                <div class="card-actions">
+                  <button
+                    mat-stroked-button
+                    (click)="setEnvPassword()"
+                    [disabled]="!hasStoredPassword || passwordLoading.isSettingEnv"
+                  >
+                    <mat-icon svgIcon="terminal"></mat-icon>
+                    {{ passwordLoading.isSettingEnv ? 'Saving...' : 'Set Environment Variable' }}
+                  </button>
+                  <button
+                    matButton="filled"
+                    class="warn"
+                    (click)="clearEnvPassword()"
+                    [disabled]="!hasEnvPassword || passwordLoading.isClearingEnv"
+                  >
+                    <mat-icon svgIcon="close"></mat-icon>
+                    {{
+                      passwordLoading.isClearingEnv ? 'Clearing...' : 'Clear Environment Variable'
+                    }}
+                  </button>
+                </div>
               </div>
-              <div class="card-actions">
-                <button
-                  mat-stroked-button
-                  (click)="setEnvPassword()"
-                  [disabled]="!hasStoredPassword || passwordLoading.isSettingEnv"
-                >
-                  <mat-icon svgIcon="terminal"></mat-icon>
-                  {{ passwordLoading.isSettingEnv ? 'Saving...' : 'Set Environment Variable' }}
-                </button>
-                <button
-                  mat-stroked-button
-                  class="warn"
-                  (click)="clearEnvPassword()"
-                  [disabled]="!hasEnvPassword || passwordLoading.isClearingEnv"
-                >
-                  <mat-icon svgIcon="close"></mat-icon>
-                  {{ passwordLoading.isClearingEnv ? 'Clearing...' : 'Clear Environment Variable' }}
-                </button>
-              </div>
-            </div>
-          }
-        </div>
-      </mat-tab>
+            }
+          </div>
+        </mat-tab>
+      }
     </mat-tab-group>
   }
 </div>
