--- a/src/app/features/modals/settings/about-modal/about-modal.component.scss
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.scss
@@ -97,6 +97,8 @@
       flex-wrap: wrap;
       justify-content: center;
       margin-bottom: var(--space-md);
+      font-size: 16px;
+      font-weight: bold;
     }
 
     .platform-badge,
