refactor: remove RemoteConfigService and update related components
- Deleted RemoteConfigService from the remote services.
- Updated index.ts to remove the export of RemoteConfigService.
- Modified remote-config-step.component.html to simplify input handling by removing unnecessary checks for Examples.
- Updated remote-config.ts to change the structure of RemoteField, adding new properties and modifying existing ones.
- Added new SettingControlComponent for managing settings with various input types.
- Implemented validation logic for different input types in SettingControlComponent.
- Created associated HTML and SCSS files for SettingControlComponent.
- Updated shared components index to include SettingControlComponent.

--- a/src/app/shared/remote-config/components/remote-config-step/remote-config-step.component.html
+++ b/src/app/shared/remote-config/components/remote-config-step/remote-config-step.component.html
@@ -99,7 +99,7 @@
         </mat-form-field>
       }
       <!-- Select Inputs -->
-      @if (field.Type !== 'bool' && field.Examples.length > 0) {
+      @if (field.Type !== 'bool') {
         <mat-form-field appearance="fill">
           <mat-label>{{ field.Name }}</mat-label>
           <mat-select [formControlName]="field.Name">
@@ -119,10 +119,7 @@
         </mat-form-field>
       }
       <!-- Default Text Input -->
-      @if (
-        !['int', 'SizeSuffix', 'bits', 'Encoding', 'Duration', 'bool'].includes(field.Type) &&
-        field.Examples.length === 0
-      ) {
+      @if (!['int', 'SizeSuffix', 'bits', 'Encoding', 'Duration', 'bool'].includes(field.Type)) {
         <mat-form-field appearance="fill">
           <mat-label>{{ field.Name }}</mat-label>
           <input
@@ -166,7 +163,7 @@
           </mat-form-field>
         }
         <!-- Select Inputs -->
-        @if (field.Type !== 'bool' && field.Examples.length > 0) {
+        @if (field.Type !== 'bool') {
           <mat-form-field appearance="fill">
             <mat-label>{{ field.Name }}</mat-label>
             <mat-select [formControlName]="field.Name">
@@ -186,10 +183,7 @@
           </mat-form-field>
         }
         <!-- Default Text Input -->
-        @if (
-          !['int', 'SizeSuffix', 'bits', 'Encoding', 'Duration', 'bool'].includes(field.Type) &&
-          field.Examples.length === 0
-        ) {
+        @if (!['int', 'SizeSuffix', 'bits', 'Encoding', 'Duration', 'bool'].includes(field.Type)) {
           <mat-form-field appearance="fill">
             <mat-label>{{ field.Name }}</mat-label>
             <input
